# dotenvy-cpp

./: CMakeLists.txt  README.md
cmake/: DotenvyConfig.cmake.in
examples/: CMakeLists.txt  dotenvy_example.cpp  example.env
include/dotenvy/: dotenvy.hpp
tests/: CMakeLists.txt  dotenvy_test.cpp
